--- a/package.json
+++ b/package.json
@@ -14,13 +14,19 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mantine/dates": "^8.3.8",
+    "@mantine/hooks": "^8.3.8",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@tabler/icons-react": "^3.35.0",
     "chart.js": "^4.5.1",
     "firebase": "^12.6.0",
+    "postcss": "^8.5.6",
+    "postcss-preset-mantine": "^1.18.0",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.4.1"
   },
